--- a/backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,9 @@ databaseChangeLog:
       file: db/changelog/009-create-ausencia.sql
   - include:
       file: db/changelog/010-seed-festivos.sql
+  - include:
+      file: db/changelog/011-update-vacacion-constraint.sql
+  - include:
+      file: db/changelog/012-festivo-por-ciudad.sql
+  - include:
+      file: db/changelog/013-add-ciudad-to-persona.sql
