feat: Kanban parent tasks, Jira integration, dashboard squad members
Backend:
- JiraImportService: actualizarEstadoTarea con estado+tipo+parent linking
- JiraImportService: crearTareaDesdeIssue con vinculacion padre via parentKey
- TareaResponse: jiraIssueKey field
- TareaMapper: mapeo jiraIssueKey desde jiraKey
- TareaRepository: findByJiraKey para busqueda por clave Jira
- 038-fix-mapeo-estados.sql: claves en ingles para mapeoEstados
- JiraAlertController/Repository: mejoras alertas

Frontend:
- KanbanBoard: agrupacion tareas padre (HISTORIA) con subtareas
- ParentTaskCard: nuevo componente con collapse, estado calculado, badges
- TaskCard: jiraIssueKey clickable link via jiraIssueUrl()
- lib/jira.ts: JIRA_BASE_URL centralizado + jiraIssueUrl()
- DashboardWidgets: inicializar con squad members, filtrar porcentaje <= 1%
- dashboard/$sprintId: query squadMemberService para miembros del squad
- planificacion/index: mejoras selector sprint

--- a/backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -78,3 +78,5 @@ databaseChangeLog:
       file: db/changelog/036-create-plantilla-asignacion.sql
   - include:
       file: db/changelog/037-alter-plantilla-asignacion-linea-add-audit.sql
+  - include:
+      file: db/changelog/038-fix-mapeo-estados.sql
